# Fever-module-chatbot

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  Gemfile  README.md  _config.yml  avg_response_time.ipynb  docker-compose.yml  index.md  install_llm_deps.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-local.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: README.md  bug_report.md  feature_request.md  good_first_issue_ab_testing.md  good_first_issue_fallback_system.md  good_first_issue_load_balancing.md  good_first_issue_multimodal.md  good_first_issue_performance_metrics.md  good_first_issue_streaming.md
.github/workflows/: deploy.yml  python-app.yml
docs/: Project_charter.md  api-reference.md  getting-started.md  index.md
docs/dev-guide/: code-of-conduct.md  contributing.md  index.md  project-charter.md  testing.md
docs/user-guide/: index.md  privacy-policy.md  prompt-engineering.md  quickstart.md
documentation/: Project_charter.md  api-reference.md  contributing.md  getting-started.md  index.md  testing.md
documentation_divided/: index.md
documentation_divided/dev-guide/: index.md
documentation_divided/user-guide/: index.md
examples/: test_providers.py
notebooks/: etl_doco_conversations.ipynb  olmo2_chatbot.ipynb  pairs_questions_answer_first_conversation.ipynb
scripts/: migrate_to_new_architecture.py
src/: __init__.py  main.py
src/cache/: __init__.py  redis.py
src/core/: llm.py  (+3 more)
tests/: conftest.py  test_adapters.py  test_config.py  test_conversations.py  test_repositories.py  test_services.py
(+21 files in other folders)
